汉化部分 web 接口服务器的终端提示文本

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -643,15 +643,15 @@ Body:
 - Original: "Client sent GIF image but GIF image support is disabled.\n"
   Translation: ""
 - Original: "Close Char DB Connection....\n"
-  Translation: ""
+  Translation: "关闭与角色数据库服务器的连接....\n"
 - Original: "Close Log DB Connection....\n"
   Translation: "关闭与日志数据库的连接....\n"
 - Original: "Close Login DB Connection....\n"
-  Translation: ""
+  Translation: "关闭与登录数据库服务器的连接....\n"
 - Original: "Close Map DB Connection....\n"
   Translation: "关闭与地图服务器主数据库的连接....\n"
 - Original: "Close Web DB Connection....\n"
-  Translation: ""
+  Translation: "关闭与 WEB 接口数据库服务器的连接....\n"
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已关闭与 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的连接.\n"
 - Original: "Closing map cache: %s\n"
@@ -673,25 +673,25 @@ Body:
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在连接到角色数据库服务器....\n"
 - Original: "Connect success! (Char Server Connection)\n"
-  Translation: ""
+  Translation: "连接成功! (WEB 接口服务器已建立与角色数据库服务器之间的连接)\n"
 - Original: "Connect success! (Login Server Connection)\n"
-  Translation: ""
+  Translation: "连接成功! (WEB 接口服务器已建立与登录数据库服务器之间的连接)\n"
 - Original: "Connect success! (Map Server Connection)\n"
   Translation: "连接成功! (地图服务器已建立与数据库之间的连接)\n"
 - Original: "Connect success! (Web Server Connection)\n"
-  Translation: ""
+  Translation: "连接成功! (WEB 接口服务器已建立与数据库服务器之间的连接)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已连接到登录服务器 (连接编号为 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
   Translation: "正在连接到 %d.%d.%d.%d 的 %i 端口\n"
 - Original: "Connecting to the Char DB server.....\n"
-  Translation: ""
+  Translation: "正在连接到角色数据库服务器....\n"
 - Original: "Connecting to the Login DB server.....\n"
-  Translation: ""
+  Translation: "正在连接到登录数据库服务器....\n"
 - Original: "Connecting to the Map DB Server....\n"
   Translation: "正在连接到地图数据库服务器....\n"
 - Original: "Connecting to the Web DB server.....\n"
-  Translation: ""
+  Translation: "正在连接到 WEB 接口数据库服务器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
@@ -907,9 +907,9 @@ Body:
 - Original: "Elemental loaded (ID: %d / Class: %d / CID: %d).\n"
   Translation: ""
 - Original: "Emblem is too big, current size is %d and the max length is %d.\n"
-  Translation: ""
+  Translation: "公会图标太大了, 当前体积是 %d 字节而最大只能接受 %d 字节.\n"
 - Original: "Emblem is too big, current size is %lu and the max length is %d.\n"
-  Translation: ""
+  Translation: "公会图标太大了, 当前体积是 %lu 字节而最大只能接受 %d 字节.\n"
 - Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
@@ -1165,7 +1165,7 @@ Body:
 - Original: "Invalid header \"Version\" type for %s database.\n"
   Translation: ""
 - Original: "Invalid image type %s, rejecting!\n"
-  Translation: ""
+  Translation: "无效的图片类型 %s, 拒绝接受!\n"
 - Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
   Translation: ""
 - Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
@@ -1335,11 +1335,11 @@ Body:
 - Original: "Loading storage for AID=%d.\n"
   Translation: "正在加载仓库数据 (账号编号: %d)...\n"
 - Original: "Locking char sql\n"
-  Translation: ""
+  Translation: "正在锁定角色数据库连接..\n"
 - Original: "Locking login sql\n"
-  Translation: ""
+  Translation: "正在锁定登录数据库连接..\n"
 - Original: "Locking web sql\n"
-  Translation: ""
+  Translation: "正在锁定 WEB 接口数据库连接..\n"
 - Original: "Log configuration file not found at: %s\n"
   Translation: "日志配置文件无法从指定路径寻得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
@@ -1915,7 +1915,7 @@ Body:
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
   Translation: ""
 - Original: "Starting server...\n"
-  Translation: ""
+  Translation: "正在启动服务器...\n"
 - Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
   Translation: ""
 - Original: "Storage %d has been saved (AID: %d).\n"
@@ -1985,9 +1985,9 @@ Body:
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "服务器之间的内部通讯账号密码 (默认是: s1/p1) 可能是无效的.\n"
 - Original: "The web-server is [{CL_GREEN}]idling[{CL_RESET}] (PACKETVER too old to use).\n\n"
-  Translation: ""
+  Translation: "WEB 接口服务器处于[{CL_GREEN}]空闲状态[{CL_RESET}] (PACKETVER 指定的客户端版本过旧, 无需使用 WEB 接口).\n\n"
 - Original: "The web-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
-  Translation: ""
+  Translation: "WEB 接口服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -2119,11 +2119,11 @@ Body:
 - Original: "UnknownStatusChange [%d]\n"
   Translation: ""
 - Original: "Unlocked char sql\n"
-  Translation: ""
+  Translation: "已解锁角色数据库连接\n"
 - Original: "Unlocked login sql\n"
-  Translation: ""
+  Translation: "已解锁登录数据库连接\n"
 - Original: "Unlocked web sql\n"
-  Translation: ""
+  Translation: "已解锁 WEB 接口数据库连接\n"
 - Original: "Unsupported element %s, skipping.\n"
   Translation: ""
 - Original: "Unsupported langtype '%d'.\n"
@@ -2187,9 +2187,9 @@ Body:
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
 - Original: "Web server hasn't started, stopping.\n"
-  Translation: ""
+  Translation: "WEB 接口服务器未启动, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
-  Translation: ""
+  Translation: "检测到 WEB 接口服务器并未运行, 将在 1 秒钟后重新检测.\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -2205,9 +2205,9 @@ Body:
 - Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
   Translation: ""
 - Original: "[AccountID: %d, World: \"%s\"] Not found in table, sending new info.\n"
-  Translation: ""
+  Translation: "[账号编号: %d, 世界: \"%s\"] 查询不到存储在数据表中的数据, 正在构造新信息返回给客户端.\n"
 - Original: "[GuildID: %d / World: \"%s\"] Not found in table\n"
-  Translation: ""
+  Translation: "[公会编号: %d / 世界: \"%s\"] 查询不到存储在数据表中的数据.\n"
 - Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
   Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建.\n"
 - Original: "[Instance] Created: %s (%d)\n"
