--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -643,15 +643,15 @@ Body:
 - Original: "Client sent GIF image but GIF image support is disabled.\n"
   Translation: ""
 - Original: "Close Char DB Connection....\n"
-  Translation: ""
+  Translation: "關閉與角色資料庫伺服器的連線....\n"
 - Original: "Close Log DB Connection....\n"
   Translation: "關閉與日誌資料庫的連線....\n"
 - Original: "Close Login DB Connection....\n"
-  Translation: ""
+  Translation: "關閉與登入資料庫伺服器的連線....\n"
 - Original: "Close Map DB Connection....\n"
   Translation: "關閉與地圖伺服器主資料庫的連線....\n"
 - Original: "Close Web DB Connection....\n"
-  Translation: ""
+  Translation: "關閉與 WEB 介面資料庫伺服器的連線....\n"
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已關閉與 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的連線.\n"
 - Original: "Closing map cache: %s\n"
@@ -673,25 +673,25 @@ Body:
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在連線到角色資料庫伺服器....\n"
 - Original: "Connect success! (Char Server Connection)\n"
-  Translation: ""
+  Translation: "連線成功! (WEB 介面伺服器已建立與角色資料庫伺服器之間的連線)\n"
 - Original: "Connect success! (Login Server Connection)\n"
-  Translation: ""
+  Translation: "連線成功! (WEB 介面伺服器已建立與登入資料庫伺服器之間的連線)\n"
 - Original: "Connect success! (Map Server Connection)\n"
   Translation: "連線成功! (地圖伺服器已建立與資料庫之間的連線)\n"
 - Original: "Connect success! (Web Server Connection)\n"
-  Translation: ""
+  Translation: "連線成功! (WEB 介面伺服器已建立與資料庫伺服器之間的連線)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已連線到登入伺服器 (連線編號為 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
   Translation: "正在連線到 %d.%d.%d.%d 的 %i 埠\n"
 - Original: "Connecting to the Char DB server.....\n"
-  Translation: ""
+  Translation: "正在連線到角色資料庫伺服器....\n"
 - Original: "Connecting to the Login DB server.....\n"
-  Translation: ""
+  Translation: "正在連線到登入資料庫伺服器....\n"
 - Original: "Connecting to the Map DB Server....\n"
   Translation: "正在連線到地圖資料庫伺服器....\n"
 - Original: "Connecting to the Web DB server.....\n"
-  Translation: ""
+  Translation: "正在連線到 WEB 介面資料庫伺服器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
@@ -907,9 +907,9 @@ Body:
 - Original: "Elemental loaded (ID: %d / Class: %d / CID: %d).\n"
   Translation: ""
 - Original: "Emblem is too big, current size is %d and the max length is %d.\n"
-  Translation: ""
+  Translation: "公會圖示太大了, 當前體積是 %d 位元組而最大隻能接受 %d 位元組.\n"
 - Original: "Emblem is too big, current size is %lu and the max length is %d.\n"
-  Translation: ""
+  Translation: "公會圖示太大了, 當前體積是 %lu 位元組而最大隻能接受 %d 位元組.\n"
 - Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
@@ -1165,7 +1165,7 @@ Body:
 - Original: "Invalid header \"Version\" type for %s database.\n"
   Translation: ""
 - Original: "Invalid image type %s, rejecting!\n"
-  Translation: ""
+  Translation: "無效的圖片型別 %s, 拒絕接受!\n"
 - Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
   Translation: ""
 - Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
@@ -1335,11 +1335,11 @@ Body:
 - Original: "Loading storage for AID=%d.\n"
   Translation: "正在載入倉庫資料 (賬號編號: %d)...\n"
 - Original: "Locking char sql\n"
-  Translation: ""
+  Translation: "正在鎖定角色資料庫連線..\n"
 - Original: "Locking login sql\n"
-  Translation: ""
+  Translation: "正在鎖定登入資料庫連線..\n"
 - Original: "Locking web sql\n"
-  Translation: ""
+  Translation: "正在鎖定 WEB 介面資料庫連線..\n"
 - Original: "Log configuration file not found at: %s\n"
   Translation: "日誌配置檔案無法從指定路徑尋得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
@@ -1915,7 +1915,7 @@ Body:
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
   Translation: ""
 - Original: "Starting server...\n"
-  Translation: ""
+  Translation: "正在啟動伺服器...\n"
 - Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
   Translation: ""
 - Original: "Storage %d has been saved (AID: %d).\n"
@@ -1985,9 +1985,9 @@ Body:
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
 - Original: "The web-server is [{CL_GREEN}]idling[{CL_RESET}] (PACKETVER too old to use).\n\n"
-  Translation: ""
+  Translation: "WEB 介面伺服器處於[{CL_GREEN}]空閒狀態[{CL_RESET}] (PACKETVER 指定的客戶端版本過舊, 無需使用 WEB 介面).\n\n"
 - Original: "The web-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
-  Translation: ""
+  Translation: "WEB 介面伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -2119,11 +2119,11 @@ Body:
 - Original: "UnknownStatusChange [%d]\n"
   Translation: ""
 - Original: "Unlocked char sql\n"
-  Translation: ""
+  Translation: "已解鎖角色資料庫連線\n"
 - Original: "Unlocked login sql\n"
-  Translation: ""
+  Translation: "已解鎖登入資料庫連線\n"
 - Original: "Unlocked web sql\n"
-  Translation: ""
+  Translation: "已解鎖 WEB 介面資料庫連線\n"
 - Original: "Unsupported element %s, skipping.\n"
   Translation: ""
 - Original: "Unsupported langtype '%d'.\n"
@@ -2187,9 +2187,9 @@ Body:
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
 - Original: "Web server hasn't started, stopping.\n"
-  Translation: ""
+  Translation: "WEB 介面伺服器未啟動, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
-  Translation: ""
+  Translation: "檢測到 WEB 介面伺服器並未執行, 將在 1 秒鐘後重新檢測.\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -2205,9 +2205,9 @@ Body:
 - Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
   Translation: ""
 - Original: "[AccountID: %d, World: \"%s\"] Not found in table, sending new info.\n"
-  Translation: ""
+  Translation: "[賬號編號: %d, 世界: \"%s\"] 查詢不到儲存在資料表中的資料, 正在構造新資訊返回給客戶端.\n"
 - Original: "[GuildID: %d / World: \"%s\"] Not found in table\n"
-  Translation: ""
+  Translation: "[公會編號: %d / 世界: \"%s\"] 查詢不到儲存在資料表中的資料.\n"
 - Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
   Translation: "[副本系統] 已建立新地圖 '%s' (%d) 基於現有地圖 '%s' (%d) 構建.\n"
 - Original: "[Instance] Created: %s (%d)\n"
