--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -2189,7 +2189,7 @@ Body:
 - Original: "Web server hasn't started, stopping.\n"
   Translation: "WEB 接口服务器未启动, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
-  Translation: "检测到 WEB 接口服务器并未运行, 将在 1 秒钟后重新检测.\n"
+  Translation: "当前 WEB 接口服务器还未进入就绪状态, 将在 1 秒钟后重试...\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
