将 web-server 工程整合进来, 以便提供客户端所需配套的 WEB 接口服务 (#432)
Co-authored-by: vstumpf <vincents.995@gmail.com>
Co-authored-by: Lemongrass3110 <lemongrass@kstp.at>
Co-authored-by: Jittapan Pluemsumran <secret@rathena.org>

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -102,6 +102,19 @@ map_server_pw: ragnarok
 map_server_db: ragnarok
 map_codepage: 
 
+// WEB 接口服务器专用
+// MySQL 主数据库的连接配置信息
+//
+// 提示: WEB 接口服务器需要读取 login 和 char 表,
+// 因此您必须确保此配置文件中 "登录服务器专用" 和 "角色服务器专用" 的配置信息是有效的,
+// 这样才能让 WEB 服务器可以访问持有这两个表的数据库.
+web_server_ip: 127.0.0.1
+web_server_port: 3306
+web_server_id: ragnarok
+web_server_pw: ragnarok
+web_server_db: ragnarok
+web_codepage:
+
 // 登录、地图服务器共用
 // MySQL 日志数据库的连接配置信息
 // 注意: log_db_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
@@ -213,6 +226,11 @@ market_table: market
 roulette_table: db_roulette
 guild_storage_log: guild_storage_log
 suspend_table: suspend
+
+// WEB 接口服务器的数据库表名配置
+guild_emblems: guild_emblems
+user_configs: user_configs
+char_configs: char_configs
 
 // 是否让地图服务器加载 SQL 版本的 item_db, mob_db 及 mob_skill_db? (yes/no)
 // 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.yaml、
