--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -16,6 +16,8 @@ Body:
   Translation: ""
 - Original: "\t server:shutdown => Stops the server.\n"
   Translation: ""
+- Original: "\t%s: %s\n"
+  Translation: ""
 - Original: "\t[%d] %s"
   Translation: ""
 - Original: "\tblocks in use      : %u/%u\n"
@@ -118,6 +120,8 @@ Body:
   Translation: ""
 - Original: " GvG TE |"
   Translation: ""
+- Original: " HideDamage |"
+  Translation: ""
 - Original: " HideGuildInfo |"
   Translation: ""
 - Original: " HideMobHPBar |"
@@ -133,6 +137,8 @@ Body:
 - Original: " NoAura |"
   Translation: ""
 - Original: " NoAutoLoot |"
+  Translation: ""
+- Original: " NoBank |"
   Translation: ""
 - Original: " NoBaseEXP |"
   Translation: ""
@@ -182,6 +188,8 @@ Body:
   Translation: ""
 - Original: " NoSkill |"
   Translation: ""
+- Original: " NoSlave |"
+  Translation: ""
 - Original: " NoSunMoonStarMiracle |"
   Translation: ""
 - Original: " NoTeleport |"
@@ -191,6 +199,8 @@ Body:
 - Original: " NoTomb |"
   Translation: ""
 - Original: " NoTrade |"
+  Translation: ""
+- Original: " NoUseItem |"
   Translation: ""
 - Original: " NoUsecart |"
   Translation: ""
@@ -277,6 +287,8 @@ Body:
 - Original: "%s - Class %d: %u\n"
   Translation: ""
 - Original: "%s Level exceeds the maximum skill level of %d, skipping.\n"
+  Translation: ""
+- Original: "%s [%s %s] %d\n"
   Translation: ""
 - Original: "%s is not a valid element.\n"
   Translation: ""
@@ -468,7 +480,13 @@ Body:
   Translation: ""
 - Original: "Battleground StartEvent label %s should begin with '::On', skipping.\n"
   Translation: ""
+- Original: "Bitmap size doesn't match size in file header.\n"
+  Translation: ""
+- Original: "Bitmap transparency check failed.\n"
+  Translation: ""
 - Original: "Blacksmith Blessing amount %hu too high, capping to MAX_AMOUNT.\n"
+  Translation: ""
+- Original: "Body is:\n%s\n"
   Translation: ""
 - Original: "Bonus Script loaded for CID=%d. Total: %d.\n"
   Translation: "已載入角色編號為: %d 的 %d 個效果指令碼 (Bonus Script).\n"
@@ -622,10 +640,18 @@ Body:
   Translation: ""
 - Original: "Client didn't send client hash (account: %s, ip: %s)\n"
   Translation: ""
+- Original: "Client sent GIF image but GIF image support is disabled.\n"
+  Translation: ""
+- Original: "Close Char DB Connection....\n"
+  Translation: "關閉與角色資料庫伺服器的連線....\n"
 - Original: "Close Log DB Connection....\n"
   Translation: "關閉與日誌資料庫的連線....\n"
+- Original: "Close Login DB Connection....\n"
+  Translation: "關閉與登入資料庫伺服器的連線....\n"
 - Original: "Close Map DB Connection....\n"
   Translation: "關閉與地圖伺服器主資料庫的連線....\n"
+- Original: "Close Web DB Connection....\n"
+  Translation: "關閉與 WEB 介面資料庫伺服器的連線....\n"
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已關閉與 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的連線.\n"
 - Original: "Closing map cache: %s\n"
@@ -646,14 +672,26 @@ Body:
   Translation: ""
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在連線到角色資料庫伺服器....\n"
+- Original: "Connect success! (Char Server Connection)\n"
+  Translation: "連線成功! (WEB 介面伺服器已建立與角色資料庫伺服器之間的連線)\n"
+- Original: "Connect success! (Login Server Connection)\n"
+  Translation: "連線成功! (WEB 介面伺服器已建立與登入資料庫伺服器之間的連線)\n"
 - Original: "Connect success! (Map Server Connection)\n"
   Translation: "連線成功! (地圖伺服器已建立與資料庫之間的連線)\n"
+- Original: "Connect success! (Web Server Connection)\n"
+  Translation: "連線成功! (WEB 介面伺服器已建立與資料庫伺服器之間的連線)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已連線到登入伺服器 (連線編號為 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
   Translation: "正在連線到 %d.%d.%d.%d 的 %i 埠\n"
+- Original: "Connecting to the Char DB server.....\n"
+  Translation: "正在連線到角色資料庫伺服器....\n"
+- Original: "Connecting to the Login DB server.....\n"
+  Translation: "正在連線到登入資料庫伺服器....\n"
 - Original: "Connecting to the Map DB Server....\n"
   Translation: "正在連線到地圖資料庫伺服器....\n"
+- Original: "Connecting to the Web DB server.....\n"
+  Translation: "正在連線到 WEB 介面資料庫伺服器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
@@ -868,6 +906,10 @@ Body:
   Translation: ""
 - Original: "Elemental loaded (ID: %d / Class: %d / CID: %d).\n"
   Translation: ""
+- Original: "Emblem is too big, current size is %d and the max length is %d.\n"
+  Translation: "公會圖示太大了, 當前體積是 %d 位元組而最大隻能接受 %d 位元組.\n"
+- Original: "Emblem is too big, current size is %lu and the max length is %d.\n"
+  Translation: "公會圖示太大了, 當前體積是 %lu 位元組而最大隻能接受 %d 位元組.\n"
 - Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
@@ -931,6 +973,8 @@ Body:
 - Original: "File '[{CL_WHITE}]%s[{CL_RESET}]' not found.\n"
   Translation: ""
 - Original: "File not found: %s\n"
+  Translation: ""
+- Original: "File size is too short\n"
   Translation: ""
 - Original: "Filling the missing values with the last exp entry.\n"
   Translation: ""
@@ -1056,6 +1100,10 @@ Body:
   Translation: ""
 - Original: "In function _vShowMessage() -> Invalid flag passed.\n"
   Translation: ""
+- Original: "Incoming Headers are:\n"
+  Translation: ""
+- Original: "Incoming Pages are:\n"
+  Translation: ""
 - Original: "Incorrect TimeLimit format %s given, skipping.\n"
   Translation: ""
 - Original: "Incorrect use of 'close' command!\n"
@@ -1116,6 +1164,8 @@ Body:
   Translation: ""
 - Original: "Invalid header \"Version\" type for %s database.\n"
   Translation: ""
+- Original: "Invalid image type %s, rejecting!\n"
+  Translation: "無效的圖片型別 %s, 拒絕接受!\n"
 - Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
   Translation: ""
 - Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
@@ -1284,6 +1334,12 @@ Body:
   Translation: "正在載入寵物資料 (寵物編號: %d)...\n"
 - Original: "Loading storage for AID=%d.\n"
   Translation: "正在載入倉庫資料 (賬號編號: %d)...\n"
+- Original: "Locking char sql\n"
+  Translation: "正在鎖定角色資料庫連線..\n"
+- Original: "Locking login sql\n"
+  Translation: "正在鎖定登入資料庫連線..\n"
+- Original: "Locking web sql\n"
+  Translation: "正在鎖定 WEB 介面資料庫連線..\n"
 - Original: "Log configuration file not found at: %s\n"
   Translation: "日誌配置檔案無法從指定路徑尋得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
@@ -1448,9 +1504,17 @@ Body:
   Translation: ""
 - Original: "Missing 'Id', skipping.\n"
   Translation: ""
+- Original: "Missing GuildID field for emblem download.\n"
+  Translation: ""
+- Original: "Missing Img field for emblem download.\n"
+  Translation: ""
+- Original: "Missing ImgType for emblem download.\n"
+  Translation: ""
 - Original: "Missing Option node.\n"
   Translation: ""
 - Original: "Missing Target 'Mob' or 'Id', skipping.\n"
+  Translation: ""
+- Original: "Missing WorldName field for emblem download.\n"
   Translation: ""
 - Original: "Missing experience for guild level %d.\n"
   Translation: ""
@@ -1550,6 +1614,8 @@ Body:
   Translation: ""
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
   Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自動檢測 IP 地址...\n"
+- Original: "Not authorized!\n"
+  Translation: ""
 - Original: "Now at: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Npc name %s too long, skipping.\n"
@@ -1567,6 +1633,8 @@ Body:
 - Original: "Opening map list: %s\n"
   Translation: "正在開啟地圖列表 (Map Index) 檔案: %s\n"
 - Original: "Options:\n"
+  Translation: ""
+- Original: "Outgoing Headers are:\n"
   Translation: ""
 - Original: "Over 65k instances of '%s' script are being run!\n"
   Translation: ""
@@ -1682,6 +1750,10 @@ Body:
   Translation: "賬號為 %s 的玩家請求從 %s 進行連線\n"
 - Original: "Request guild bound item(s) retrieval for CID = [{CL_WHITE}]%d[{CL_RESET}], AID = %d, Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
   Translation: ""
+- Original: "Request with AID %d GDID %d and token %s unverified\n"
+  Translation: ""
+- Original: "Request with AID %d and token %s unverified\n"
+  Translation: ""
 - Original: "Requested '[{CL_WHITE}]%[{PRIdPTR}][{CL_RESET}]' guild castles from char-server...\n"
   Translation: "已向角色伺服器請求獲取 '[{CL_WHITE}][{PRIdPTR}][{CL_RESET}]' 個公會城堡資訊...\n"
 - Original: "Requested non-existant character id: %d!\n"
@@ -1702,6 +1774,8 @@ Body:
   Translation: ""
 - Original: "Requires Weapon %s is invalid.\n"
   Translation: "依賴的武器(Weapon) %s 無效.\n"
+- Original: "Response status is: %d\n"
+  Translation: ""
 - Original: "RetaliateRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
@@ -1753,6 +1827,10 @@ Body:
 - Original: "Server is '[{CL_GREEN}]ready[{CL_RESET}]' and listening on port '[{CL_WHITE}]%d[{CL_RESET}]'.\n\n"
   Translation: "地圖伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 [{CL_WHITE}]%d[{CL_RESET}]).\n\n"
 - Original: "Server is running on '[{CL_WHITE}]PK Mode[{CL_RESET}]'.\n"
+  Translation: ""
+- Original: "Server received ImgType BMP but received file does not start with \"BM\" magic header.\n"
+  Translation: ""
+- Original: "Server received ImgType GIF but received file does not start with \"GIF\" magic header.\n"
   Translation: ""
 - Original: "Server received crash signal! Attempting to save all online characters!\n"
   Translation: "服務端程式接收到崩潰訊號, 正在嘗試儲存線上角色的資料...\n"
@@ -1836,6 +1914,8 @@ Body:
   Translation: "開始檢查資料庫表格和欄位的完整性.\n"
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
   Translation: ""
+- Original: "Starting server...\n"
+  Translation: "正在啟動伺服器...\n"
 - Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
   Translation: ""
 - Original: "Storage %d has been saved (AID: %d).\n"
@@ -1904,6 +1984,10 @@ Body:
   Translation: ""
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
+- Original: "The web-server is [{CL_GREEN}]idling[{CL_RESET}] (PACKETVER too old to use).\n\n"
+  Translation: "WEB 介面伺服器處於[{CL_GREEN}]空閒狀態[{CL_RESET}] (PACKETVER 指定的客戶端版本過舊, 無需使用 WEB 介面).\n\n"
+- Original: "The web-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
+  Translation: "WEB 介面伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -2034,6 +2118,12 @@ Body:
   Translation: ""
 - Original: "UnknownStatusChange [%d]\n"
   Translation: ""
+- Original: "Unlocked char sql\n"
+  Translation: "已解鎖角色資料庫連線\n"
+- Original: "Unlocked login sql\n"
+  Translation: "已解鎖登入資料庫連線\n"
+- Original: "Unlocked web sql\n"
+  Translation: "已解鎖 WEB 介面資料庫連線\n"
 - Original: "Unsupported element %s, skipping.\n"
   Translation: ""
 - Original: "Unsupported langtype '%d'.\n"
@@ -2055,6 +2145,8 @@ Body:
 - Original: "Usage of deprecated constant '%s'.\n"
   Translation: ""
 - Original: "Usage of deprecated script function '%s'.\n"
+  Translation: ""
+- Original: "Usage: %s\n"
   Translation: ""
 - Original: "Usage: %s [options]\n"
   Translation: ""
@@ -2094,6 +2186,10 @@ Body:
   Translation: ""
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
+- Original: "Web server hasn't started, stopping.\n"
+  Translation: "WEB 介面伺服器未啟動, 正在停止.\n"
+- Original: "Web server not running, sleeping 1 second.\n"
+  Translation: "當前 WEB 介面伺服器還未進入就緒狀態, 將在 1 秒鐘後重試...\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -2108,6 +2204,10 @@ Body:
   Translation: "您正在使用 root 許可權執行熊貓模擬器, 但我們並不需要如此高的許可權.\n"
 - Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
   Translation: ""
+- Original: "[AccountID: %d, World: \"%s\"] Not found in table, sending new info.\n"
+  Translation: "[賬號編號: %d, 世界: \"%s\"] 查詢不到儲存在資料表中的資料, 正在構造新資訊返回給客戶端.\n"
+- Original: "[GuildID: %d / World: \"%s\"] Not found in table\n"
+  Translation: "[公會編號: %d / 世界: \"%s\"] 查詢不到儲存在資料表中的資料.\n"
 - Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
   Translation: "[副本系統] 已建立新地圖 '%s' (%d) 基於現有地圖 '%s' (%d) 構建.\n"
 - Original: "[Instance] Created: %s (%d)\n"
@@ -2739,6 +2839,10 @@ Body:
 - Original: "buildin_getsameipinfo: Invalid map name '%s'.\n"
   Translation: ""
 - Original: "buildin_getsameipinfo: ip address must be string variable\n"
+  Translation: ""
+- Original: "buildin_getskillinfo: Invalid skill ID %d.\n"
+  Translation: ""
+- Original: "buildin_getskillinfo: Invalid skill name %s.\n"
   Translation: ""
 - Original: "buildin_gettime: Invalid date type %d\n"
   Translation: ""
