--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -16,6 +16,8 @@ Body:
   Translation: ""
 - Original: "\t server:shutdown => Stops the server.\n"
   Translation: ""
+- Original: "\t%s: %s\n"
+  Translation: ""
 - Original: "\t[%d] %s"
   Translation: ""
 - Original: "\tblocks in use      : %u/%u\n"
@@ -118,6 +120,8 @@ Body:
   Translation: ""
 - Original: " GvG TE |"
   Translation: ""
+- Original: " HideDamage |"
+  Translation: ""
 - Original: " HideGuildInfo |"
   Translation: ""
 - Original: " HideMobHPBar |"
@@ -133,6 +137,8 @@ Body:
 - Original: " NoAura |"
   Translation: ""
 - Original: " NoAutoLoot |"
+  Translation: ""
+- Original: " NoBank |"
   Translation: ""
 - Original: " NoBaseEXP |"
   Translation: ""
@@ -182,6 +188,8 @@ Body:
   Translation: ""
 - Original: " NoSkill |"
   Translation: ""
+- Original: " NoSlave |"
+  Translation: ""
 - Original: " NoSunMoonStarMiracle |"
   Translation: ""
 - Original: " NoTeleport |"
@@ -191,6 +199,8 @@ Body:
 - Original: " NoTomb |"
   Translation: ""
 - Original: " NoTrade |"
+  Translation: ""
+- Original: " NoUseItem |"
   Translation: ""
 - Original: " NoUsecart |"
   Translation: ""
@@ -277,6 +287,8 @@ Body:
 - Original: "%s - Class %d: %u\n"
   Translation: ""
 - Original: "%s Level exceeds the maximum skill level of %d, skipping.\n"
+  Translation: ""
+- Original: "%s [%s %s] %d\n"
   Translation: ""
 - Original: "%s is not a valid element.\n"
   Translation: ""
@@ -468,7 +480,13 @@ Body:
   Translation: ""
 - Original: "Battleground StartEvent label %s should begin with '::On', skipping.\n"
   Translation: ""
+- Original: "Bitmap size doesn't match size in file header.\n"
+  Translation: ""
+- Original: "Bitmap transparency check failed.\n"
+  Translation: ""
 - Original: "Blacksmith Blessing amount %hu too high, capping to MAX_AMOUNT.\n"
+  Translation: ""
+- Original: "Body is:\n%s\n"
   Translation: ""
 - Original: "Bonus Script loaded for CID=%d. Total: %d.\n"
   Translation: "已加载角色编号为: %d 的 %d 个效果脚本 (Bonus Script).\n"
@@ -622,10 +640,18 @@ Body:
   Translation: ""
 - Original: "Client didn't send client hash (account: %s, ip: %s)\n"
   Translation: ""
+- Original: "Client sent GIF image but GIF image support is disabled.\n"
+  Translation: ""
+- Original: "Close Char DB Connection....\n"
+  Translation: "关闭与角色数据库服务器的连接....\n"
 - Original: "Close Log DB Connection....\n"
   Translation: "关闭与日志数据库的连接....\n"
+- Original: "Close Login DB Connection....\n"
+  Translation: "关闭与登录数据库服务器的连接....\n"
 - Original: "Close Map DB Connection....\n"
   Translation: "关闭与地图服务器主数据库的连接....\n"
+- Original: "Close Web DB Connection....\n"
+  Translation: "关闭与 WEB 接口数据库服务器的连接....\n"
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已关闭与 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的连接.\n"
 - Original: "Closing map cache: %s\n"
@@ -646,14 +672,26 @@ Body:
   Translation: ""
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在连接到角色数据库服务器....\n"
+- Original: "Connect success! (Char Server Connection)\n"
+  Translation: "连接成功! (WEB 接口服务器已建立与角色数据库服务器之间的连接)\n"
+- Original: "Connect success! (Login Server Connection)\n"
+  Translation: "连接成功! (WEB 接口服务器已建立与登录数据库服务器之间的连接)\n"
 - Original: "Connect success! (Map Server Connection)\n"
   Translation: "连接成功! (地图服务器已建立与数据库之间的连接)\n"
+- Original: "Connect success! (Web Server Connection)\n"
+  Translation: "连接成功! (WEB 接口服务器已建立与数据库服务器之间的连接)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已连接到登录服务器 (连接编号为 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
   Translation: "正在连接到 %d.%d.%d.%d 的 %i 端口\n"
+- Original: "Connecting to the Char DB server.....\n"
+  Translation: "正在连接到角色数据库服务器....\n"
+- Original: "Connecting to the Login DB server.....\n"
+  Translation: "正在连接到登录数据库服务器....\n"
 - Original: "Connecting to the Map DB Server....\n"
   Translation: "正在连接到地图数据库服务器....\n"
+- Original: "Connecting to the Web DB server.....\n"
+  Translation: "正在连接到 WEB 接口数据库服务器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
@@ -868,6 +906,10 @@ Body:
   Translation: ""
 - Original: "Elemental loaded (ID: %d / Class: %d / CID: %d).\n"
   Translation: ""
+- Original: "Emblem is too big, current size is %d and the max length is %d.\n"
+  Translation: "公会图标太大了, 当前体积是 %d 字节而最大只能接受 %d 字节.\n"
+- Original: "Emblem is too big, current size is %lu and the max length is %d.\n"
+  Translation: "公会图标太大了, 当前体积是 %lu 字节而最大只能接受 %d 字节.\n"
 - Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
@@ -931,6 +973,8 @@ Body:
 - Original: "File '[{CL_WHITE}]%s[{CL_RESET}]' not found.\n"
   Translation: ""
 - Original: "File not found: %s\n"
+  Translation: ""
+- Original: "File size is too short\n"
   Translation: ""
 - Original: "Filling the missing values with the last exp entry.\n"
   Translation: ""
@@ -1056,6 +1100,10 @@ Body:
   Translation: ""
 - Original: "In function _vShowMessage() -> Invalid flag passed.\n"
   Translation: ""
+- Original: "Incoming Headers are:\n"
+  Translation: ""
+- Original: "Incoming Pages are:\n"
+  Translation: ""
 - Original: "Incorrect TimeLimit format %s given, skipping.\n"
   Translation: ""
 - Original: "Incorrect use of 'close' command!\n"
@@ -1116,6 +1164,8 @@ Body:
   Translation: ""
 - Original: "Invalid header \"Version\" type for %s database.\n"
   Translation: ""
+- Original: "Invalid image type %s, rejecting!\n"
+  Translation: "无效的图片类型 %s, 拒绝接受!\n"
 - Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
   Translation: ""
 - Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
@@ -1284,6 +1334,12 @@ Body:
   Translation: "正在加载宠物数据 (宠物编号: %d)...\n"
 - Original: "Loading storage for AID=%d.\n"
   Translation: "正在加载仓库数据 (账号编号: %d)...\n"
+- Original: "Locking char sql\n"
+  Translation: "正在锁定角色数据库连接..\n"
+- Original: "Locking login sql\n"
+  Translation: "正在锁定登录数据库连接..\n"
+- Original: "Locking web sql\n"
+  Translation: "正在锁定 WEB 接口数据库连接..\n"
 - Original: "Log configuration file not found at: %s\n"
   Translation: "日志配置文件无法从指定路径寻得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
@@ -1448,9 +1504,17 @@ Body:
   Translation: ""
 - Original: "Missing 'Id', skipping.\n"
   Translation: ""
+- Original: "Missing GuildID field for emblem download.\n"
+  Translation: ""
+- Original: "Missing Img field for emblem download.\n"
+  Translation: ""
+- Original: "Missing ImgType for emblem download.\n"
+  Translation: ""
 - Original: "Missing Option node.\n"
   Translation: ""
 - Original: "Missing Target 'Mob' or 'Id', skipping.\n"
+  Translation: ""
+- Original: "Missing WorldName field for emblem download.\n"
   Translation: ""
 - Original: "Missing experience for guild level %d.\n"
   Translation: ""
@@ -1550,6 +1614,8 @@ Body:
   Translation: ""
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
   Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自动检测 IP 地址...\n"
+- Original: "Not authorized!\n"
+  Translation: ""
 - Original: "Now at: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Npc name %s too long, skipping.\n"
@@ -1567,6 +1633,8 @@ Body:
 - Original: "Opening map list: %s\n"
   Translation: "正在打开地图列表 (Map Index) 文件: %s\n"
 - Original: "Options:\n"
+  Translation: ""
+- Original: "Outgoing Headers are:\n"
   Translation: ""
 - Original: "Over 65k instances of '%s' script are being run!\n"
   Translation: ""
@@ -1682,6 +1750,10 @@ Body:
   Translation: "账号为 %s 的玩家请求从 %s 进行连接\n"
 - Original: "Request guild bound item(s) retrieval for CID = [{CL_WHITE}]%d[{CL_RESET}], AID = %d, Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
   Translation: ""
+- Original: "Request with AID %d GDID %d and token %s unverified\n"
+  Translation: ""
+- Original: "Request with AID %d and token %s unverified\n"
+  Translation: ""
 - Original: "Requested '[{CL_WHITE}]%[{PRIdPTR}][{CL_RESET}]' guild castles from char-server...\n"
   Translation: "已向角色服务器请求获取 '[{CL_WHITE}][{PRIdPTR}][{CL_RESET}]' 个公会城堡信息...\n"
 - Original: "Requested non-existant character id: %d!\n"
@@ -1702,6 +1774,8 @@ Body:
   Translation: ""
 - Original: "Requires Weapon %s is invalid.\n"
   Translation: "依赖的武器(Weapon) %s 无效.\n"
+- Original: "Response status is: %d\n"
+  Translation: ""
 - Original: "RetaliateRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
@@ -1753,6 +1827,10 @@ Body:
 - Original: "Server is '[{CL_GREEN}]ready[{CL_RESET}]' and listening on port '[{CL_WHITE}]%d[{CL_RESET}]'.\n\n"
   Translation: "地图服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 [{CL_WHITE}]%d[{CL_RESET}]).\n\n"
 - Original: "Server is running on '[{CL_WHITE}]PK Mode[{CL_RESET}]'.\n"
+  Translation: ""
+- Original: "Server received ImgType BMP but received file does not start with \"BM\" magic header.\n"
+  Translation: ""
+- Original: "Server received ImgType GIF but received file does not start with \"GIF\" magic header.\n"
   Translation: ""
 - Original: "Server received crash signal! Attempting to save all online characters!\n"
   Translation: "服务端程序接收到崩溃信号, 正在尝试保存在线角色的数据...\n"
@@ -1836,6 +1914,8 @@ Body:
   Translation: "开始检查数据库表格和字段的完整性.\n"
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
   Translation: ""
+- Original: "Starting server...\n"
+  Translation: "正在启动服务器...\n"
 - Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
   Translation: ""
 - Original: "Storage %d has been saved (AID: %d).\n"
@@ -1904,6 +1984,10 @@ Body:
   Translation: ""
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "服务器之间的内部通讯账号密码 (默认是: s1/p1) 可能是无效的.\n"
+- Original: "The web-server is [{CL_GREEN}]idling[{CL_RESET}] (PACKETVER too old to use).\n\n"
+  Translation: "WEB 接口服务器处于[{CL_GREEN}]空闲状态[{CL_RESET}] (PACKETVER 指定的客户端版本过旧, 无需使用 WEB 接口).\n\n"
+- Original: "The web-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
+  Translation: "WEB 接口服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -2034,6 +2118,12 @@ Body:
   Translation: ""
 - Original: "UnknownStatusChange [%d]\n"
   Translation: ""
+- Original: "Unlocked char sql\n"
+  Translation: "已解锁角色数据库连接\n"
+- Original: "Unlocked login sql\n"
+  Translation: "已解锁登录数据库连接\n"
+- Original: "Unlocked web sql\n"
+  Translation: "已解锁 WEB 接口数据库连接\n"
 - Original: "Unsupported element %s, skipping.\n"
   Translation: ""
 - Original: "Unsupported langtype '%d'.\n"
@@ -2055,6 +2145,8 @@ Body:
 - Original: "Usage of deprecated constant '%s'.\n"
   Translation: ""
 - Original: "Usage of deprecated script function '%s'.\n"
+  Translation: ""
+- Original: "Usage: %s\n"
   Translation: ""
 - Original: "Usage: %s [options]\n"
   Translation: ""
@@ -2094,6 +2186,10 @@ Body:
   Translation: ""
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
+- Original: "Web server hasn't started, stopping.\n"
+  Translation: "WEB 接口服务器未启动, 正在停止.\n"
+- Original: "Web server not running, sleeping 1 second.\n"
+  Translation: "当前 WEB 接口服务器还未进入就绪状态, 将在 1 秒钟后重试...\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -2108,6 +2204,10 @@ Body:
   Translation: "您正在使用 root 权限运行熊猫模拟器, 但我们并不需要如此高的权限.\n"
 - Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
   Translation: ""
+- Original: "[AccountID: %d, World: \"%s\"] Not found in table, sending new info.\n"
+  Translation: "[账号编号: %d, 世界: \"%s\"] 查询不到存储在数据表中的数据, 正在构造新信息返回给客户端.\n"
+- Original: "[GuildID: %d / World: \"%s\"] Not found in table\n"
+  Translation: "[公会编号: %d / 世界: \"%s\"] 查询不到存储在数据表中的数据.\n"
 - Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
   Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建.\n"
 - Original: "[Instance] Created: %s (%d)\n"
@@ -2739,6 +2839,10 @@ Body:
 - Original: "buildin_getsameipinfo: Invalid map name '%s'.\n"
   Translation: ""
 - Original: "buildin_getsameipinfo: ip address must be string variable\n"
+  Translation: ""
+- Original: "buildin_getskillinfo: Invalid skill ID %d.\n"
+  Translation: ""
+- Original: "buildin_getskillinfo: Invalid skill name %s.\n"
   Translation: ""
 - Original: "buildin_gettime: Invalid date type %d\n"
   Translation: ""
