--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,4 +23,5 @@ endif()
 add_subdirectory( login )
 add_subdirectory( char )
 add_subdirectory( map )
+add_subdirectory( web )
 add_subdirectory( tool )
