汉化和校正部分配置文件的注释信息

--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -23,46 +23,55 @@
 //--------------------------------------------------------------
 
 // 哪些单位能拥有基础攻击值 (即 BaseAtk 值)
-// 或者说能够让他的str属性影响到他输出的伤害? (掩码选项)
-// 默认值是 9, 表示此选项包含: 玩家(1) + 生命体(8)
+// 或者说: 哪些单位能够让它的 str 属性影响到它输出的伤害? (掩码选项)
 // 此选项针对复兴前版本 (Pre-Renewal)
+//
+// 默认值为: 9, 表示此选项包含: 玩家(1) + 生命体(8)
 enable_baseatk: 9
 
 // 哪些单位能拥有基础攻击值 (即 BaseAtk 值)
-// 或者说能够让他的str属性影响到他输出的伤害? (掩码选项)
-// 默认值是 0x29F, 表示此选项包含: 全部可选择单位
+// 或者说: 哪些单位能够让它的 str 属性影响到它输出的伤害? (掩码选项)
 // 此选项针对复兴后版本 (Renewal)
+//
+// 默认值为: 0x29F, 表示此选项包含: 全部可选择单位
 enable_baseatk_renewal: 0x29F
 
 // 哪些单位能够掌握完全回避? (掩码选项)
 // 这里需要注意: 能掌握不代表它已经会, 只能表示它能会.
-// 默认值是 1, 表示此选项包含: 玩家(1)
+//
+// 默认值为: 1, 表示此选项包含: 玩家(1)
 enable_perfect_flee: 1
 
 // 哪些单位能够产生暴击? (掩码选项)
 // 注意: 有些技能会无视此设置, 该出现暴击的时候还是会出现暴击的
-// 默认值是 17, 表示此选项包含: 玩家(1) + 佣兵(16)
+//
+// 默认值为: 17, 表示此选项包含: 玩家(1) + 佣兵(16)
 enable_critical: 17
 
 // 魔物产生暴击的倍率 (百分比选项)
+//
+// 默认值为: 100
 mob_critical_rate: 100
 
-// 除了玩家和魔物外, 其他单位(宠物、生命体、佣兵)产生暴击的倍率 (百分比选项)
+// 除了玩家和魔物外, 其他单位产生暴击的倍率 (百分比选项)
+// 其他单位是指如: 宠物、生命体、佣兵、元素精灵
+//
+// 默认值为: 100
 critical_rate: 100
 
 // 普通攻击是否会导致指定单位有移动延迟? (掩码选项)
 // 
 // 若将某种单位设置为不会导致移动延迟, 那么它将在攻击发起之后立刻就可以移动
 // (攻击动画过程和移动动画过程或许会被客户端省略, 可能会产生攻击动画没播放完毕、
-// 或者魔物瞬间移动到你身边的错觉)
+// 或者魔物瞬间移动到您身边的错觉)
 // 
 // 否则, 这个'移动延迟'的时间长度将等于单位的'攻击动画'时间,
 // 这也意味着只有攻击动画播放结束了, 指定的单位才能够进行移动
 //
-// 默认值是 15, 表示此选项包含: 玩家(1) + 魔物(2) + 宠物(4) + 生命体(8)
+// 默认值为: 15, 表示此选项包含: 玩家(1) + 魔物(2) + 宠物(4) + 生命体(8)
 attack_walk_delay: 15
 
-// 被击中后的移动延迟调整 (Note 2)
+// 被击中后的移动延迟调整 (百分比选项)
 // 被击中后“不能行走”的延迟是按照伤害动画持续时间的百分比计算的.
 // 注意:只影响一次攻击的正常延迟，而不是下面的multihit_delay选项所添加的延迟。
 pc_damage_walk_delay_rate: 20
@@ -75,7 +84,7 @@ damage_walk_delay_rate: 100
 // 230 is the setting that makes walkdelay last until the last hit (vs Jupitel thunder)
 multihit_delay: 80
 
-// Damaged delay rate for players (Note 2)
+// Damaged delay rate for players (百分比选项)
 // (Setting to no/0  will be like always endure)
 player_damage_delay_rate: 100
 
@@ -85,7 +94,10 @@ player_damage_delay_rate: 100
 // 2 = both (either one works)
 undead_detect_type: 0
 
-// 被同属性伤害攻击是否会恢复HP(例:穿火铠甲,被火箭攻击时会增加血量)? (Note 1)
+// 被同属性伤害攻击, 是否会变成恢复血量? (开关选项)
+// 若设置为 yes 则穿戴火鳞盔甲 (物品编号: 2344) 的情况下被火箭攻击时会恢复血量
+//
+// 默认值为: no
 attribute_recover: no
 
 // 普通攻击的最小和最大命中率是多少? (百分比选项)
@@ -99,55 +111,67 @@ max_hitrate: 100
 // 
 // 0 = 不减少回避率
 // 1 = 减少 agi_penalty_num 选项指定百分比的回避率
-//     例如: 当 agi_penalty_num 填写 10, 则意味着围攻你的敌人在
-//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 10% 的回避率
+//     例如: 当 agi_penalty_num 填写 10, 则意味着围攻您的敌人在
+//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人您就会降低 10% 的回避率
 // 2 = 减少 agi_penalty_num 选项指定数值的回避率
-//     例如: 当 agi_penalty_num 填写 20, 则意味着围攻你的敌人在
-//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 20 点回避率
+//     例如: 当 agi_penalty_num 填写 20, 则意味着围攻您的敌人在
+//           超过 agi_penalty_count 设定的数量之后, 每增加一个敌人您就会降低 20 点回避率
 //
-// 在现实生活中, 如果你动作很灵敏, 和一个人打架时你可以轻松回避的话,
-// 那么当你以一敌十的时候, 你的回避率肯定是会降低的...
+// 在现实生活中, 如果您动作很灵敏, 和一个人打架时您可以轻松回避的话,
+// 那么当您以一敌十的时候, 您的回避率肯定是会降低的...
 // 
-// 这个机制与此类似, 当玩家被很多魔物围攻的时候, 你的回避率也会相应减少.
+// 这个机制与此类似, 当玩家被很多魔物围攻的时候, 您的回避率也会相应减少.
+// 
+// 默认值为: 1
 agi_penalty_type: 1
 
 // 当回避率惩罚机制被启用时(或者说, 当 agi_penalty_type 不等于 0 时), 
 // 哪种类型的单位会受到该机制的影响? (掩码选项)
 // 
-// 默认值是 1, 表示只有 玩家(1) 会受到影响.
+// 默认值为: 1, 表示只有 玩家(1) 会受到影响.
 agi_penalty_target: 1
 
 // 超过多少个敌人将自己作为攻击目标时, 就开始触发回避率惩罚机制?
+// 
+// 默认值为: 3
 agi_penalty_count: 3
 
-// 当攻击自己的敌人数量大于 agi_penalty_count 指定的魔物数量后, 
-// 每增加一个敌人, 扣减多少回避率?
+// 当同时攻击自己的敌人数量大于 agi_penalty_count 指定的魔物数量后, 
+// 每增加一个敌人自己将会降低多少回避率?
 // 如果 agi_penalty_type 为 1 则这里表示百分比, 为 2 则表示具体数值
+// 
+// 默认值为: 10
 agi_penalty_num: 10
 
 // 当有超过 vit_penalty_count 指定个数的魔物把玩家当做攻击目标时,
 // 以哪种方式对玩家的VIT属性带来的物理防御力进行减算(下称为物理防御力惩罚)?
 // 0 = 不减少物理防御力
 // 1 = 减少 vit_penalty_num 选项指定百分比的物理防御力
-//     例如: 当 vit_penalty_num 填写 10, 则意味着围攻你的敌人在
-//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 10% 的物理防御力
+//     例如: 当 vit_penalty_num 填写 10, 则意味着围攻您的敌人在
+//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人您就会降低 10% 的物理防御力
 // 2 = 减少 vit_penalty_num 选项指定数值的物理防御力
-//     例如: 当 vit_penalty_num 填写 20, 则意味着围攻你的敌人在
-//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人你就会降低 20 点物理防御力
+//     例如: 当 vit_penalty_num 填写 20, 则意味着围攻您的敌人在
+//           超过 vit_penalty_count 设定的数量之后, 每增加一个敌人您就会降低 20 点物理防御力
+// 
+// 默认值为: 1
 vit_penalty_type: 1
 
 // 当物理防御力惩罚机制被启用时(或者说, 当 vit_penalty_type 不等于 0 时), 
 // 哪种类型的单位会受到该机制的影响? (掩码选项)
 // 
-// 默认值是 1, 表示只有 玩家(1) 会受到影响.
+// 默认值为: 1, 表示只有 玩家(1) 会受到影响.
 vit_penalty_target: 1
 
 // 超过多少个敌人将自己作为攻击目标时, 就开始触发物理防御力惩罚机制?
+// 
+// 默认值为: 3
 vit_penalty_count: 3
 
-// 当攻击自己的敌人数量大于 vit_penalty_count 指定的魔物数量后, 
-// 每增加一个敌人, 扣减多少物理防御力?
+// 当同时攻击自己的敌人数量大于 vit_penalty_count 指定的魔物数量后, 
+// 每增加一个敌人自己将会降低多少物理防御力?
 // 如果 vit_penalty_type 为 1 则这里表示百分比, 为 2 则表示具体数值
+// 
+// 默认值为: 5
 vit_penalty_num: 5
 
 // 使用物理攻击的DEF计算替代方法.
@@ -159,36 +183,47 @@ weapon_defense_type: 0
 // MDEF, same as above. (MDEF * value)
 magic_defense_type: 0
 
-// 每次攻击时改变攻击者的方向以面对对手? (Note 3)
+// 每次攻击时改变攻击者的方向以面对对手? (掩码选项)
 //注意:在官方服务器上击退一些技能，如防火墙总是基于
 //最后一个方向行走。即使攻击的方向完全不同
-//击退方向不会改变，因此，例如，如果你向北走，然后攻击敌人
-//你仍然会被防火墙打回南方。不动的怪物
+//击退方向不会改变，因此，例如，如果您向北走，然后攻击敌人
+//您仍然会被防火墙打回南方。不动的怪物
 //总是会被打回南方，因为它们默认的方向是北方。
 attack_direction_change: 0
 
 // For those who is set, their innate attack element is "not elemental"
-// (100% versus on all defense-elements) (Note 3)
+// (100% versus on all defense-elements) (掩码选项)
 // NOTE: This is the setting that makes it so non-players can hit for full
 // damage against Ghost-type targets with normal attacks (eg: vs. Ghostring).
 attack_attr_none: 14
 
-// 装备被破坏的速率(任何技能修改前的基本速率)
-// 1 = 0.01% chance. Default for official servers: 0
+// 装备自然损坏率 (万分比选项)
+// 
+// 此选项将指定一个初始的装备损坏概率值,
+// 初始概率值将在后面被 equip_self_break_rate 选项和其他 bonus 进一步调整.
+// 
+// 只要发起物理类型的攻击, 那么装备就有一定的概率会损坏
+// 设为 1 = 0.01% 损坏率.
+// 
+// 默认值为: 0
 equip_natural_break_rate: 0
 
-// 你自己的装备可能损坏的总比率. (Note 2)
-// This rate affects penalty breaking rate of skills such as power-thrust and your natural breaking rate 
-// (from equip_natural_break_rate). If a Sage's endow skill fails and this is above 0, the selected char's
-// weapon will be broken.
+// 损坏自己装备的倍率 (百分比选项)
+// 此选项会影响 "凶砍" 和 "装备自然损坏率" 损坏自己装备的效果
+// 如果贤者的 "属性附加" 系列技能失败且此选项的值大于 0 那么被附加的目标角色武器依然会被损坏.
+// 
+// 默认值为: 100
 equip_self_break_rate: 100
 
-// 破坏目标装备的总速率. (Note 2)
-// This affects the behaviour of skills like acid terror and meltdown
+// 损坏被攻击目标装备的倍率. (百分比选项)
+// 此选项会影响 "强酸攻击" 和 "野蛮凶砍" 技能损坏目标装备效果
+// 
+// 默认值为: 100
 equip_skill_break_rate: 100
 
 // 使用武器进行攻击时, 是否会延迟一小会儿才产生实际伤害? (开关选项)
-// 提示: 官服的设置为 yes, 尽管这会降低一些性能.
+// 
+// 默认值为: yes, 尽管这会降低一些性能.
 delay_battle_damage: yes
 
 // 使用弓系武器或枪系武器时, 是否消耗箭矢或子弹?
@@ -203,30 +238,43 @@ delay_battle_damage: yes
 //
 // 感觉选项 2 是为了“避免出现有些技能由于技能数据库不完整, 从而导致无需消耗箭矢”而
 // 设计的一个严格选项, 应该没有太大的用处. 
+// 
+// 默认值为: 1
 arrow_decrement: 1
 
-// 脱下武器时.子弹弹药是否同时脱下?
-// 官方的行为是“yes”.
+// 当玩家脱下武器时是否同时脱下弹药? (开关选项)
+// 此处的弹药是指弹药类型的道具, 例如: 箭矢 / 子弹 / 短刀等
+//
+// 默认值为: yes
 ammo_unequip: yes
 
-// Should a suitable weapon be equipped when equipping ammo?
-// Official behavior is "yes".
+// 装备弹药的时候是否检查对应的武器类型? (开关选项)
+// 此处的弹药是指弹药类型的道具, 例如: 箭矢 / 子弹 / 短刀等
+// 开启之后若弹药类型与当前穿戴的武器类型不适配, 则会提示弹药装备失败.
+//
+// 默认值为: yes
 ammo_check_weapon: yes
 
 // 由物品脚本触发的 'autospell' 在自动咏唱技能之前, 是否先检查与目标的距离?
-// 官服的设定为 "no", 如果修改为 "yes" 的话, 会让技能使用他们在 skill_db 中定义的距离来进行判断.
-// 例如: 音速投掷要求在距离目标2格范围内, 才能被 'autospell' 自动咏唱发动.
+// 若设置为 yes 则会使用技能在 skill_db 中定义的距离来进行判断.
+// 例如: 音速投掷要求在距离目标 2 格范围内才能被 'autospell' 自动咏唱发动.
 // 此设置同时也对 autospellwhenhit 脚本指令有效.
+//
+// 默认值为: no
 autospell_check_range: no
 
-// If both the attacker and the target are on the same tile, should the target be knocked back to the left?
-// Official behavior is "yes", setting this to "no" will knock the target back behind the attacker.
+// 当攻击者和目标都在同一个格子上时, 目标是否会被击退到左侧? (开关选项)
+// 若设置为 no 将会把目标击退到攻击者的后面.
+//
+// 默认值为: yes
 knockback_left: yes
 
 // 玩家是否能够同时召唤出猎鹰和野狼? (开关选项)
-// 由于官服默认禁止玩家同时召唤猎鹰和野狼, 所以这里的默认值为 no!
+//
+// 默认值为: no, 因为官服默认禁止玩家同时召唤猎鹰和野狼
 warg_can_falcon: no
 
-// Should the target be able of dodging damage by snapping away to the edge of the screen?
-// Official behavior is "no"
+// 被攻击的目标是否可以通过跳到攻击者的屏幕边缘来躲避伤害? (开关选项)
+//
+// 默认值为: no
 snap_dodge: no
