--- a/conf/battle_athena.conf
+++ b/conf/battle_athena.conf
@@ -4,6 +4,7 @@
 // 由 Ancyker 最终全部翻译成全英文
 // 由 Skotlex 将此配置分割成多个配置文件, 并放在 battle 目录中
 // 由熊猫模拟器开发团队翻译成中文并加以润色
+// 由 Sola丶小克 / CairoLee 完成最终校对 (2021-6-19 15:13:48)
 //--------------------------------------------------------------
 // 提示: 此配置文件中, 只要是以 // 作为开头的行, 都是注释信息. 
 // 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
@@ -27,7 +28,7 @@ import: conf/battle/exp.conf
 // GM 等级, GM 指令和防黑相关的配置文件
 import: conf/battle/gm.conf
 
-// 公会和公会城战配置文件
+// 公会与公会城战配置文件
 import: conf/battle/guild.conf
 
 // 战场配置文件
@@ -60,8 +61,8 @@ import: conf/battle/status.conf
 // 功能开关配置文件
 import: conf/battle/feature.conf
 
-// 其他无法归类的选项, 都会被放在下面这个配置文件
-// 包括决斗机制、昼夜控制机制、禁言机制、日志设定等等
+// 其他无法归类的选项都会被放在下面这个配置文件
+// 包括但不限: 决斗机制、昼夜控制机制、禁言机制、日志设定等等
 import: conf/battle/misc.conf
 
 // 您自定义的配置, 可放在下面的配置文件中
