--- a/conf/subnet_athena.conf
+++ b/conf/subnet_athena.conf
@@ -1,12 +1,15 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器 - 子网划分配置文件
 // 由熊猫模拟器开发团队翻译成中文并加以润色
+// 由 Sola丶小克 / CairoLee 完成最终校对 (2021-6-19 15:14:55)
 //--------------------------------------------------------------
 //
 // 数据库格式说明:
 // subnet: 子网掩码:角色服务器 IP 地址:地图服务器 IP 地址
 // 
-// 你可以在此添加更多的子网设置, 最多支持16条
+//--------------------------------------------------------------
+// 
+// 您可以在此添加更多的子网设置, 最多支持16条
 // 
 // 当客户端与登录服务器建立连接且账号验证通过后
 // 如果 (客户端 IP 地址 & 子网掩码) == (此处规则设置的角色服务器 IP 地址 & 子网掩码) 成立
@@ -17,5 +20,7 @@
 // 如果 (客户端 IP 地址 & 子网掩码) == (此处规则设置的角色服务器 IP 地址 & 子网掩码) 成立
 // 那么将使用此处规则设置的地图服务器 IP 地址返回给客户端
 // 若不匹配任何一条子网规则, 则将使用 map_athena.conf 中配置的 map_ip 返回给客户端
+// 
+//--------------------------------------------------------------
 
 subnet: 255.0.0.0:127.0.0.1:127.0.0.1
