--- a/conf/battle/battleground.conf
+++ b/conf/battle/battleground.conf
@@ -2,6 +2,7 @@
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
 // 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
+// 由 Sola丶小克 / CairoLee 完成最终校对 (2021-6-19 15:11:13)
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -23,28 +24,52 @@
 //--------------------------------------------------------------
 
 // 在战场中除了技能外的近距离攻击伤害倍率 (百分比选项)
+//
+// 默认值为: 80
 bg_short_attack_damage_rate: 80
 
 // 在战场中除了技能外的远距离攻击伤害倍率 (百分比选项)
+//
+// 默认值为: 80
 bg_long_attack_damage_rate: 80
 
 // 在战场中的物理技能伤害倍率 (百分比选项)
+//
+// 默认值为: 60
 bg_weapon_attack_damage_rate: 60
 
 // 在战场中的魔法技能伤害倍率 (百分比选项)
+//
+// 默认值为: 60
 bg_magic_attack_damage_rate: 60
 
 // 在战场中的特殊技能伤害倍率 (百分比选项)
+//
+// 默认值为: 60
 bg_misc_attack_damage_rate: 60
 
-// 在战场地图中的回避惩罚 (百分比选项)
-// 这里的回避是指玩家属性面板中的 Flee 属性
-// 注意: 这是一个百分比数值, 所以填写 20 表示在战场中的回避要比正常地图减少 20%
+// 在战场地图中的回避率惩罚 (百分比选项)
+// 这里的回避率是指玩家属性面板中的 Flee 属性
+// 注意: 这是百分比数值, 所以填写 20 表示在战场中的回避要比正常地图减少 20%
+//
+// 默认值为: 20
 bg_flee_penalty: 20
 
 // 每隔多长时间更新一次小地图上战场队友的位置 (以毫秒为单位)
+// 间隔越小, 队友的位置更新会越及时, 但同时服务端每秒发送的封包数也将提高.
+//
+// 例如: 假定战场队伍中己方含自己在内有 12 名队员,
+// 那么每秒需要发送 144 个位置封包. 但如果将该值调整为 100 毫秒,
+// 则每秒需要发送 1440 个位置封包.
+//
+// 默认值为: 1000 / 最小值为: 100
 bg_update_interval: 1000
 
-// Before a player is warped into a Battleground from the Battleground Queue,
-// check to see if the player's current map has MF_NOWARP.
+// 当玩家处于拥有 MF_NOWARP 地图标记的地图时
+// 能否被战场队列机制直接传送至战场地图? (开关选项)
+// 
+// 此选项设置为 yes 则表示会进行检查, 即:
+// 若玩家所处的地图使用了 MF_NOWARP 地图标记, 那么他将无法进入战场
+//
+// 默认值为: no
 bgqueue_nowarp_mapflag: no
